2004-03-23  James Henstridge  <james@daa.com.au>

	* jhbuild/modtypes/base.py (CVSModule.do_install): add module to
	packagedb on successful install.

	* jhbuild/modtypes/tarball.py (Tarball.do_start): instead of
	writing a file in the build directory as a tag that we have
	already build/installed this tarball, use the PackageDB.  Since
	this is installed in the install prefix, we will rebuild the
	tarball if the install prefix is wiped.
	(Tarball.do_install): on successful install, add to packagedb.

	* jhbuild/frontends/buildscript.py (BuildScript.__init__): create
	a PackageDB for the buildscript.
	(BuildScript.build): if a module successfully builds, add it to
	the package database.

	* jhbuild/utils/packagedb.py (PackageDB): new file to keep track
	of installed versions of various packages.

2004-03-21  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome26.modules: Fix branch for gnome-games,
	gnome-netstatus, gnomemeeting.

2004-03-21  Christian Persch  <chpe@cvs.gnome.org>

	* modulesets/gnome26.modules:
	Use gnome-2-6 branch for epiphany-extensions.

2004-03-19  James Henstridge  <james@daa.com.au>

	* Makefile: fix up the "make dist" target to do something useful.
	This is in case I want to produce tarball releases ...

2004-03-18  James Henstridge  <james@daa.com.au>

	* modulesets/gnome26.modules (libgail-gnome): requires
	gnome-panel.  Fixes bug #137154.

	* jhbuild/commands/base.py (run): don't print a traceback for
	unknown command names.  Fixes bug #136445.  Based on a patch by
	Paolo Borelli <pborelli@katamail.com>.

	* jhbuild/commands/tinderbox.py (do_tinderbox): raise a UsageError
	if no output directory specified (related to bug 136638).

	* jhbuild/frontends/tinderbox.py (TinderboxBuildScript.end_build):
	fix printing of error values.

2004-03-18  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* modulesets/gnome24.modules:
	Use gnome-2-4 branch for zenity.

2004-03-17  Frederic Crozat  <fcrozat@mandrakesoft.com>
